Fixed button positions on mobile and desktop.

--- a/src/Pages/LandingPage/LandingPage.css
+++ b/src/Pages/LandingPage/LandingPage.css
@@ -74,19 +74,15 @@
   bottom: -3vh;
 }
 
-
 /* Desktop media queries*/
-
 @media only screen and (max-width: 992px)
 {
-
   #landing-page-button-container {
-    bottom: 12vh;
+    bottom: -10vh;
   }
+
   #landing-page-banner  {
    bottom: 4vh;
    height: 100px;
   }
-  
-
 }
